Design: fix minor issues in homepage
Nav-item padding has been fixed, it was too wide on small screens.

Home section vertical padding has been halved in size on small screens.
It looks better this way.

--- a/themes/basakbeykoz/react-src/src/components/layout/nav/_navFixed.layout.scss
+++ b/themes/basakbeykoz/react-src/src/components/layout/nav/_navFixed.layout.scss
@@ -92,7 +92,7 @@ nav {
 
         & .Nav-item {
           display: block;
-          padding: #{get-gap(2)} #{get-gap(4)};
+          padding: #{get-gap()} #{get-gap(2)};
           position: relative;
           color: #{getColor('text-dark')};
           text-align: right;
