--- a/themes/basakbeykoz/react-src/src/styles/vendors-extensions/wordpress/home/_home.scss
+++ b/themes/basakbeykoz/react-src/src/styles/vendors-extensions/wordpress/home/_home.scss
@@ -19,10 +19,14 @@ $nav__mobile_height_px: get-component-property('nav', 'mobile-height_px');
 
   & > .wp-block-group {
     box-sizing: border-box;
-    padding: #{get-gap(2)};
+    padding: #{get-gap() get-gap(2)};
     min-height: #{$section_height_min_responsive};
     overflow: hidden;
     position: relative;
+
+    @include breakpoint('w', 'WQVGA__') {
+      padding: #{get-gap(2)};
+    }
 
     & > .wp-block-group__inner-container {
       min-height: #{$section_height_min_responsive};
